--- a/Book/AddEditPage.xaml
+++ b/Book/AddEditPage.xaml
@@ -8,8 +8,23 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddEditPage">
 
-    <Grid >
-        <TextBlock FontSize="30" HorizontalAlignment="Center" Text="HELLO" VerticalAlignment="Center"/>
-
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock  Text="Название книги"></TextBlock>
+        <TextBlock Text="Год издания" Grid.Row="1"></TextBlock>
+        <TextBlock Text="Текст книги" Grid.Row="2"></TextBlock>
+        <TextBox Text="{Binding Name}" Grid.Column="1"></TextBox>
+        <TextBox Text="{Binding Year}" Grid.Column="1" Grid.Row="1"></TextBox>
+        <TextBox Text="{Binding Text}" Grid.Column="1" Grid.Row="2" Margin="50,10,50,0" Height="165"></TextBox>
+        <Button Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="4" Name="BtnSave" Click="BtnSave_Click"></Button>
     </Grid>
 </Page>
