--- a/Book/LoginScreen.xaml
+++ b/Book/LoginScreen.xaml
@@ -6,15 +6,15 @@
         xmlns:local="clr-namespace:Book"
         mc:Ignorable="d"
         Title="Login" Height="350" Width="300" FontSize="14" Background="#8A2BE2">
-    <Border Background="#2e3137" CornerRadius="20" Margin="20">
+    <Border Background="#261E35" CornerRadius="20" Margin="20">
         <StackPanel Margin="20">
             <Label Content="Login" Foreground="White" FontSize="25" HorizontalAlignment="Center"/>
             <Separator></Separator>
             <Label Content="UserName" Foreground="White"/>
-            <TextBox Name="txtUsername" Background="#545d6a" Foreground="White" FontSize="18" Margin="0,5" Width="212"/>
+            <TextBox Name="txtUsername" Background="#17121F" Foreground="White" FontSize="18" Margin="0,5" Width="200"/>
             <Label Content="Password" Foreground="White"/>
-            <PasswordBox Name="txtPassword" Background="#545d6a" Foreground="White" FontSize="18"/>
-            <Button x:Name="btnSubmit" Click="btnSubmit_Click" Content="Submit" Margin="60,10,52,10" Background="#545d6a" Foreground="White" FontSize="18" Width="Auto"/>
+            <PasswordBox Name="txtPassword" Background="#17121F" Foreground="White" FontSize="18" Margin="0,5" Width="200" Height="30"/>
+            <Button x:Name="btnSubmit" Click="btnSubmit_Click" Content="Login" Margin="60,10,52,10" Background="#7D43E2" Foreground="White" FontSize="18" Width="Auto"/>
         </StackPanel>
     </Border>
 </Window>
