--- a/Book/AddEditPage.xaml
+++ b/Book/AddEditPage.xaml
@@ -24,7 +24,7 @@
         <TextBlock Text="Текст книги" Grid.Row="2"></TextBlock>
         <TextBox Text="{Binding Name}" Grid.Column="1"></TextBox>
         <TextBox Text="{Binding Year}" Grid.Column="1" Grid.Row="1"></TextBox>
-        <TextBox Text="{Binding Text}" Grid.Column="1" Grid.Row="2" Margin="50,10,50,0" Height="165"></TextBox>
+        <TextBox Text="{Binding Text}" Grid.Column="1" Grid.Row="2" Margin="50,10,50,0" Height="165" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" Language="ru-ru" TextAlignment="Left"></TextBox>
         <Button Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="4" Name="BtnSave" Click="BtnSave_Click"></Button>
     </Grid>
 </Page>
