--- a/Book/AddEditPage.xaml
+++ b/Book/AddEditPage.xaml
@@ -5,14 +5,20 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Book"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="800" Background="White"
       Title="AddEditPage">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="200"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -21,10 +27,34 @@
         </Grid.ColumnDefinitions>
         <TextBlock  Text="Название книги"></TextBlock>
         <TextBlock Text="Год издания" Grid.Row="1"></TextBlock>
-        <TextBlock Text="Текст книги" Grid.Row="2"></TextBlock>
-        <TextBox Text="{Binding Name}" Grid.Column="1"></TextBox>
-        <TextBox Text="{Binding Year}" Grid.Column="1" Grid.Row="1"></TextBox>
-        <TextBox Text="{Binding Text}" Grid.Column="1" Grid.Row="2" Margin="50,10,50,0" Height="165" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" Language="ru-ru" TextAlignment="Left"></TextBox>
-        <Button Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="4" Name="BtnSave" Click="BtnSave_Click"></Button>
+        <TextBlock Text="Место издания" Grid.Row="2"></TextBlock>
+        <TextBlock Text="Текст книги" Grid.Row="8"></TextBlock>
+        <TextBlock Text="Название издательства" Grid.Row="3"></TextBlock>
+        <TextBlock Text="Автор" Grid.Row="4"></TextBlock>
+        <TextBlock Text="Преподаватель" Grid.Row="5"></TextBlock>
+        <TextBlock Text="Предмет" Grid.Row="6"></TextBlock>
+        <TextBlock Text="Образовательное учреждение" Grid.Row="7"></TextBlock>
+        <TextBox Text="{Binding Name_Book}" Grid.Column="1"></TextBox>
+        <TextBox Text="{Binding Publishing_Year}" Grid.Column="1" Grid.Row="1"></TextBox>
+        <TextBox Text="{Binding Place_of_publishing}" Grid.Column="1" Grid.Row="2"></TextBox>
+        <TextBox Text="{Binding Publisher_Name}" Grid.Column="1" Grid.Row="3"></TextBox>
+        <TextBox Text="{Binding Autor.Name}" Grid.Column="1" Grid.Row="4" Width="150" Margin="-350,0,0,0" Height="30"></TextBox>
+        <TextBox Text="{Binding Autor.Surname}" Grid.Column="1" Grid.Row="4" Width="150"/>
+        <TextBox Text="{Binding Autor.Patronymic}" Grid.Column="1" Grid.Row="4" Width="150" Margin="350,0,0,0" Height="30"/>
+        <TextBox Text="{Binding Teacher.Name}" Grid.Column="1" Grid.Row="5" Width="100" Margin="-400,0,0,0" Height="30"/>
+        <TextBox Text="{Binding Teacher.Surname}" Grid.Column="1" Grid.Row="5" Width="100" Margin="-150,0,0,0"/>
+        <TextBox Text="{Binding Teacher.Patronymic}" Grid.Column="1" Grid.Row="5" Width="100" Margin="100,0,0,0"/>
+        <TextBox Text="{Binding Teacher.Speciality}" Grid.Column="1" Grid.Row="5" Width="131" Margin="370,0,0,0"/>
+        <TextBox Text="{Binding Predmet.Name_Predmet}" Grid.Column="1" Grid.Row="6"></TextBox>
+        <TextBox Text="{Binding Obrazov_Ychrezd}" Grid.Column="1" Grid.Row="7"></TextBox>
+        <TextBox Text="{Binding Text}" Grid.Column="1" Grid.Row="8" Margin="50,10,50,0" Height="165" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="True" Language="ru-ru" TextAlignment="Left"></TextBox>
+        <Button Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="9" Name="BtnSave" Click="BtnSave_Click"></Button>
+        <Label Grid.Column="1" Content="Имя" HorizontalAlignment="Center" Margin="-330,0,0,0" Grid.Row="4" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" Width="74"/>
+        <Label Grid.Column="1" Content="Фамилия" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" Width="74"/>
+        <Label Grid.Column="1" Content="Отчество" HorizontalAlignment="Center" Margin="370,0,0,0" Grid.Row="4" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" Width="74"/>
+        <Label Grid.Column="1" Content="Имя" Margin="-380,0,0,0" Grid.Row="5" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" HorizontalAlignment="Center" Width="74"/>
+        <Label Grid.Column="1" Content="Фамилия" Margin="-130,0,0,0" Grid.Row="5" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" HorizontalAlignment="Center" Width="74"/>
+        <Label Grid.Column="1" Content="Отчество" Margin="120,0,0,0" Grid.Row="5" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" HorizontalAlignment="Center" Width="74"/>
+        <Label Grid.Column="1" Content="Специальность" Margin="400,0,0,0" Grid.Row="5" VerticalAlignment="Center" Grid.RowSpan="2" Height="20" HorizontalAlignment="Center" Width="103"/>
     </Grid>
 </Page>
