--- a/Book/BookPageStudent.xaml
+++ b/Book/BookPageStudent.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Book.BookPage"
+﻿<Page x:Class="Book.BookPageStudent"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Book"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="BookPage" IsVisibleChanged="Page_IsVisibleChanged">
+      Title="BookPageStudent" IsVisibleChanged="Page_IsVisibleChanged1">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -22,13 +22,11 @@
                 <DataGridTemplateColumn Width="auto">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Редактировать" Name="BtnEdit" Click="BtnEdit_Click"></Button>
+                            <Button Content="Просмотр" Name="BtnEdit" Click="BtnEdit_Click"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Добавить" Grid.Row="1" HorizontalAlignment="Left" Name="BtnAdd" Click="BtnAdd_Click"></Button>
-        <Button Content="Удалить" Grid.Row="1" HorizontalAlignment="Right" Name="BtnDelete" Click="BtnDelete_Click"></Button>
     </Grid>
 </Page>
